--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <nav>
                 <div class="nav-brand">
-                    <img class="logo" src="Pictures/logo.png" alt="logo">
+                    <img class="logo" src="logo.png" alt="logo">
                 </div>
                 <div class="nav-items">
                     <ul class="nav-links">
@@ -40,7 +40,7 @@
             <button class="btn-primary">Hire Me</button>
         </div>
         <div class="app-img">
-            <img src="pictures/welcome.jpg" alt="">
+            <img src="welcome.jpg" alt="">
         </div>
 
         <footer>
