--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="contact.css">
   </head>
-  <body style="background-image: url(pictures/wp2.png)">
+  <body style="background-image: url(wp2.png)">
 
     <form>
       <div class="login">
