--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="login.css">
   </head>
-  <body style="background-image: url(pictures/wp2.png)">
+  <body style="background-image: url(wp2.png)">
 
     <form>
       <div class="login">
