--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <li><a href="#" class="nav-link">Help</a></li>
                     </ul>
                     <button class="btn-secondary">
-                        <a href="Login.html" class="login">Log in</a>
+                        <a href="login.html" class="login">Log in</a>
                     </button>
                 </div>
             </nav>
