--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Login</title>
+    <title>Contact Us</title>
     <link rel="stylesheet" href="contact.css">
   </head>
   <body style="background-image: url(wp2.png)">
