--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             <input type="submit" value="Send">
             </div>
             <center>
-             <a class="link "href="file:///C:/Users/user/Documents/Kumpulan%20tugas/DMI/HTML/website/Web.html#">Back to Home</a>
+             <a class="link "href="https://muhammadfaridirawan.github.io/test/">Back to Home</a>
            </center>
       </div>
       </form>
