--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
             <input type="submit" value="Login">
             </div>
             <center>
-             <a class="link "href="file:///C:/Users/user/Documents/Kumpulan%20tugas/DMI/HTML/website/Web.html#">Back to Home</a>
+             <a class="link "href="https://muhammadfaridirawan.github.io/test/">Back to Home</a>
            </center>
       </div>
       </form>
