--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Website Saya</title>
+    <title>Welcome to my Website</title>
     <link rel="stylesheet" href="web.css">
 </head>
 <body>
@@ -35,7 +35,7 @@
             </h1>
             <p class="text-muted">
                 Freelancing with Designer
-                And Web Developer
+                And Photographer
             </p>
             <button class="btn-primary">Hire Me</button>
         </div>
