--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="nav-items">
                     <ul class="nav-links">
-                        <li><a href="#" class="nav-link active">Home</a></li>
+                        <li><a href="https://muhammadfaridirawan.github.io/test/" class="nav-link active">Home</a></li>
                         <li><a href="#" class="nav-link">About</a></li>
                         <li><a href="#" class="nav-link">Services</a></li>
                         <li><a href="#" class="nav-link">Our Team</a></li>
