--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <li><a href="https://muhammadfaridirawan.github.io/test/" class="nav-link active">Home</a></li>
                         <li><a href="#" class="nav-link">About</a></li>
                         <li><a href="#" class="nav-link">Services</a></li>
-                        <li><a href="#" class="nav-link">Our Team</a></li>
+                        <li><a href="#" class="nav-link">Creation</a></li>
                         <li><a href="#" class="nav-link">Help</a></li>
                     </ul>
                     <button class="btn-secondary">
